--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,6 @@
 
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
-Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
 Kenechukwu Akubue <kengoon19@gmail.com>
+Anthony Igbodiegwu <peakybeetle@gmail.com>
